# bonanza-mine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/bzm/: bzm.h
src/: bzm_commands.c
tests/: CMakeLists.txt  mock_transport.c  mock_transport.h  test_commands.c  test_headers.c
